--- a/modules/habari_install/templates/mysql_head.php.erb
+++ b/modules/habari_install/templates/mysql_head.php.erb
@@ -1,5 +1,5 @@
 <?php if ( !defined( 'HABARI_PATH' ) ) { die( 'No direct access' ); }
-Config::set( '<%= @connection %>', array(
+Config::set( 'db_connection', array(
    'connection_string'=>'mysql:host=<%= @host %>;dbname=<%= @schema %>',
    'username'=>'<%= @user %>',
    'password'=>'<%= @password %>',
